@@ -35,7 +35,7 @@ ivy.version=2.2.0
 groovy.version=2.4.21
 guava.version=11.0.2
 hbase1.version=1.2.4
-hbase2.version=2.0.0
+hbase2.version=2.4.14
 hsqldb.version=2.4.0
 hive1.version=1.2.1
 hive.version=3.1.2
@@ -71,7 +71,7 @@ spark2.version=2.4.8
 xerces.version=2.10.0
 xalan.version=2.7.1
 wagon-http.version=1.0-beta-2
-zookeeper.version=3.4.5
+zookeeper.version=3.5.7
 servlet.version=4.0.6
 protobuf-java.version=2.5.0
 metrics-core.version=2.1.2
